# janus-gateway

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  WORKSPACE  clang.bazelrc
bazel/: api_binding.bzl  api_build.bzl  build_system.bzl  repositories.bzl
bazel/externel/: externel_repository.bzl  yaml_cpp.BUILD
cmake/modules/: Findlibjansson.cmake
janus/: CMakeLists.txt  config.c  dtls.c  rtpsrtp.h  sdp.c
janus/events/: CMakeLists.txt
janus/loggers/: CMakeLists.txt
janus/plugins/: CMakeLists.txt  plugin.h
janus/transports/: CMakeLists.txt  janus_websockets.c  transport.h
